# harbour-amazfish

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README.md  clickable.json  clickable.yaml  harbour-amazfish.apparmor  harbour-amazfish.desktop  harbour-amazfish.pro  manifest.json  transifex.yml
click/: CMakeLists.txt  click.pro  disable-armhf-version-check.patch  enable-clang-cross-compiling.patch  harbour-amazfish-ui.desktop  harbour-amazfish.apparmor  manifest.json.in  run-daemon.sh  run.sh
daemon/: CMakeLists.txt  chirp.raw  daemon.pro  harbour-amazfish-sailfish.service.in  harbour-amazfish.service  harbour-amazfish.service.in  harbour-amazfishd.privileges
daemon/src/: achievements.cpp  achievements.h  activitycoordinate.cpp  activitycoordinate.h  activitykind.cpp  activitykind.h  activitysample.cpp  activitysample.h  activitysampleex.cpp  activitysampleex.h  activitysummary.cpp  activitysummary.h  bangleacttrkrecord.cpp  bangleacttrkrecord.h  bipactivitydetailparser.cpp  bipactivitydetailparser.cpp.autosave  bipactivitydetailparser.h  btdiscoverymodel.cpp  btdiscoverymodel.h  calendarreader.cpp  calendarreader.h  codec.h  dbushrm.cpp  dbushrm.h  devicefactory.cpp  devicefactory.h  deviceinterface.cpp  deviceinterface.h  harbour-amazfish-daemon.cpp  huamifirmwareinfo.cpp  navigationinterface.cpp  navigationinterface.h  notificationslistener.h  realtimeactivitysample.cpp  realtimeactivitysample.h  settingsmanager.cpp  settingsmanager.h  transliterator.cpp  transliterator.h  typeconversion.cpp  (+2 more)
daemon/src/devices/: abstractactivitydetailparser.cpp  abstractactivitydetailparser.h  abstractactivitysummaryparser.h  abstractdevice.cpp  abstractdevice.h  abstractfirmwareinfo.cpp  abstractfirmwareinfo.h  asteroidosdevice.cpp  asteroidosdevice.h  banglejsdevice.cpp  banglejsdevice.h  bipactivitydetailparser.h  bipdevice.cpp  bipdevice.h  bipfirmwareinfo.cpp  bipfirmwareinfo.h  biplitedevice.cpp  biplitedevice.h  biplitefirmwareinfo.cpp  biplitefirmwareinfo.h  bipsdevice.cpp  bipsdevice.h  dk08device.cpp  dk08device.h  garmindevice.cpp  garmindevice.h  gtr2device.cpp  gtr2device.h  gtr2firmwareinfo.cpp  gtr2firmwareinfo.h  gtrdevice.cpp  gtrdevice.h  gtrfirmwareinfo.cpp  gtrfirmwareinfo.h  gts2device.cpp  gts2device.h  gts2firmwareinfo.cpp  gts2firmwareinfo.h  gtsdevice.cpp  gtsdevice.h  (+22 more)
daemon/src/ecdh/: ecdh.c  ecdh.h
daemon/src/operations/: abstractfetchoperation.cpp  abstractfetchoperation.h  abstractoperation.cpp  abstractoperation.h  activityfetchoperation.cpp  activityfetchoperation.h  adafruitblefsoperation.cpp  adafruitblefsoperation.h  adafruitblefsworker.cpp  adafruitblefsworker.h  dfuoperation.cpp  dfuoperation.h  dfuworker.cpp  dfuworker.h  huami2020handler.cpp  huami2020handler.h  huami2021chunkeddecoder.cpp  huami2021chunkeddecoder.h  huami2021chunkedencoder.cpp  huami2021chunkedencoder.h  huami2021handler.cpp  huamiinitoperation2021.cpp  huamiinitoperation2021.h  huamiupdatefirmwareoperation2020.cpp  huamiupdatefirmwareoperation2020.h  logfetchoperation.cpp  logfetchoperation.h  sportsdetailoperation.cpp  sportsdetailoperation.h  sportssummaryoperation.cpp  sportssummaryoperation.h  updatefirmwareoperation.cpp  updatefirmwareoperation.h  updatefirmwareoperationnew.cpp  updatefirmwareoperationnew.h
daemon/src/services/: abstractoperationservice.cpp  abstractoperationservice.h  adafruitblefsservice.cpp  adafruitblefsservice.h  alertnotificationservice.cpp  alertnotificationservice.h  asteroidmediaservice.cpp  asteroidmediaservice.h  asteroidnotificationservice.cpp  asteroidnotificationservice.h  asteroidscreenshotservice.cpp  asteroidscreenshotservice.h  asteroidtimeservice.cpp  asteroidtimeservice.h  asteroidweatherservice.cpp  asteroidweatherservice.h  batteryservice.cpp  batteryservice.h  bipfirmwareservice.cpp  bipfirmwareservice.h  currenttimeservice.cpp  currenttimeservice.h  deviceinfoservice.cpp  deviceinfoservice.h  dfuservice.cpp  dfuservice.h  dk08nusservice.cpp  (+38 more)
daemon/translations/: harbour-amazfishd-ar.ts  harbour-amazfishd-be.ts  harbour-amazfishd-cs.ts  harbour-amazfishd-de.ts  harbour-amazfishd-es.ts  harbour-amazfishd-fa.ts  harbour-amazfishd-fr.ts  harbour-amazfishd-he.ts  harbour-amazfishd-it.ts  harbour-amazfishd-nb_NO.ts  harbour-amazfishd-nl.ts  harbour-amazfishd-pl.ts  harbour-amazfishd-pt.ts  harbour-amazfishd-pt_BR.ts  harbour-amazfishd-ru.ts  harbour-amazfishd-sv.ts  harbour-amazfishd-ta.ts  harbour-amazfishd-uk.ts  harbour-amazfishd-zh_Hans.ts  harbour-amazfishd.ts
lib/: CMakeLists.txt  lib.pro
lib/src/: activitykind.cpp  activitykind.h  amazfish.cpp  amazfish.h  amazfishconfig.cpp  amazfishconfig.h  typeconversion.cpp  typeconversion.h
ui/: CMakeLists.txt  activity-icons.qrc  amazfish.qrc  harbour-amazfish-ui.appdata.xml  harbour-amazfish-ui.desktop  icons.qrc  platform-kirigami.qrc  platform-qtcontrols.qrc  platform-silica.qrc  platform-uuitk.qrc  ui.pro  update-qrc.sh
ui/o2/: CMakeLists.txt
ui/qml/: AmazfishConfig.qml  harbour-amazfish.qml
ui/src/: daemoninterface.cpp  daemoninterface.cpp.autosave  daemoninterface.h  dataproviderfactory.cpp  dataproviderfactory.h  datasource.cpp  datasource.h  harbour-amazfish-ui.cpp  huamidatasource.cpp  huamidatasource.h  paimodel.cpp  paimodel.h  sportsdatamodel.cpp  sportsdatamodel.h  sportsmetamodel.cpp  sportsmetamodel.h  timeformatter.cpp  timeformatter.h  trackloader.cpp  trackloader.h  zepposdatasource.cpp  zepposdatasource.h
ui/translations/: harbour-amazfish-de.ts  harbour-amazfish-es.ts  harbour-amazfish-ru.ts  harbour-amazfish-ui-ar.ts  harbour-amazfish-ui-be.ts  harbour-amazfish-ui-cs.ts  harbour-amazfish-ui-de.ts  harbour-amazfish-ui-es.ts  harbour-amazfish-ui-fa.ts  harbour-amazfish-ui-fr.ts  harbour-amazfish-ui-he.ts  harbour-amazfish-ui-it.ts  harbour-amazfish-ui-nb_NO.ts  harbour-amazfish-ui-nl.ts  harbour-amazfish-ui-pl.ts  harbour-amazfish-ui-pt.ts  harbour-amazfish-ui-pt_BR.ts  harbour-amazfish-ui-ru.ts  harbour-amazfish-ui-sv.ts  harbour-amazfish-ui-ta.ts  harbour-amazfish-ui-uk.ts  harbour-amazfish-ui-zh_CN.ts  harbour-amazfish-ui.ts  harbour-amazfish.ts
(+494 files in other folders)
